<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Form2ObjExample</string>
    <string name="result_here">Result will be displayed here</string>
    <string name="phone">Phone:</string>
    <string name="name">Name:</string>
    <string name="form2obj_with_prefix">Form2Obj with Prefix</string>
    <string name="ignored">Ignored field:</string>
    <string name="age">Age:</string>
    <string name="street">Street:</string>
    <string name="number">Number:</string>
    <string name="city">City:</string>
    <string name="form_to_obj">Form to Object</string>
    <string name="obj_to_form">Object to Form</string>

</resources>