<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:id="@+id/form"
	    android:orientation="vertical" >
	
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/name"
	        />
	    <EditText
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPersonName"
	        android:id="@+id/field_name" />
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/phone"
	        />
	    <EditText
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="phone"
	        android:id="@+id/field_phone" />
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/ignored"
	        />
	    <EditText
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="phone"
	        android:id="@+id/phone" />
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/age"
	        />
	    <EditText
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="number"
	        android:id="@+id/field_age" />
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/street"
	        />
	    <EditText
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:id="@+id/field_address_street" />
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/number"
	        />
	    <EditText
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="number"
	        android:id="@+id/field_address_number" />
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/city"
	        />
	    <EditText
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:id="@+id/field_address_city" />
	    <Button 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/form_to_obj"
	        android:id="@+id/formToObj"
	        />
	    <Button 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/obj_to_form"
	        android:id="@+id/objToForm"
	        />
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/result_here"
	        android:id="@+id/result"
	        />
	
	</LinearLayout>
</ScrollView>